src/libqgraphicswidget.bf

	[LinkName("QGraphicsWidget_UngrabKeyboardEvent")]
	public static extern void QGraphicsWidget_UngrabKeyboardEvent(void* c_this, QEvent event);
	[LinkName("QGraphicsWidget_Tr2")]
	public static extern char8[] QGraphicsWidget_Tr2(char8[] s, char8[] c);
	[LinkName("QGraphicsWidget_Tr3")]
	public static extern char8[] QGraphicsWidget_Tr3(char8[] s, char8[] c, int32 n);
	[LinkName("QGraphicsWidget_GrabShortcut2")]
	public static extern int32 QGraphicsWidget_GrabShortcut2(void* c_this, QKeySequence sequence, int64 context);
	[LinkName("QGraphicsWidget_SetShortcutEnabled2")]
	public static extern void QGraphicsWidget_SetShortcutEnabled2(void* c_this, int32 id, bool enabled);
	[LinkName("QGraphicsWidget_SetShortcutAutoRepeat2")]
	public static extern void QGraphicsWidget_SetShortcutAutoRepeat2(void* c_this, int32 id, bool enabled);
	[LinkName("QGraphicsWidget_SetAttribute2")]
	public static extern void QGraphicsWidget_SetAttribute2(void* c_this, int64 attribute, bool on);
}